2274 [Adaptive Muxer] fixed handling of the "and close" button
2273 [Audio Encoding Window] cosmetics
2272 [AVS Script Creator] moved "acceptable aspect error" setting into the AviSynth profile (1% by default)
     [AVS Script Creator] improved AR chooser
     [MediaInfo] improved aspect ratio detection
2269 [MP4 Muxer] restrict "group=1" to the Apple Devices regarding Audio streams
2268 [AVS Script Creator] use very high accuracy for anamorphic encodings if acceptable aspect error is set to 0%
2267 [AVS Script Creator] improved accuracy of the "Aspect Ratio Error"
     [AVS Script Creator] improved accuracy of the aspect ratio when using "Clever (TM) anamorphic encoding"
     [AVS Script Creator] internal optimizations
     [OneClick] implemented the AVS Script Creator changes
2266 [Audio Encoder] added BassAudioSource() as decoder. Part II
2265 [MP4 Muxer] improved iOS compatibility when using multiple audio/subtitle tracks. Patch #65 by Eli Bildirici
2264 [Worker] a temporary worker will always be deleted after a job is finished (successful or not)
2263 [Audio] changed default value of the normalization to disabled
2262 [AVS Script Creator] show "Aspect Ratio Error" when doing an anamorphic encoding
                          some cosmetic sizing & cropping enhancements
2261 [Update] added system proxy. Patch by Shevek
2260 [AVS Script Creator] changed "point of view" of the aspect error calculation
2259 [Audio Encoder] added BassAudioSource() as decoder
                     default order: NicAudio, BassAudio, FFAudioSource, DirectShow
2258 [Job] improved aborting of Jobs
2256 [AVS Script Creator] fixed a slight rounding error in the aspect error calculation
2255 [AVS Script Creator] resize is enabled by default in the profiles (only for new profiles)
     [AVS Script Creator] suggest resolution is automatically pre-selected when doing a resize
     [AVS Script Creator] DAR changes also triggers a recalc of the "Aspect Ratio Error"